[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=1.0.0",
    "scanpy>=1.12",
    "scikit-misc>=0.5.2",
    "spatialdata-io>=0.5.1",
    "spatialdata-plot>=0.2.13",
    "squidpy>=1.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]
